portfolio_1-main/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: portfolio-container
          image: jamilshaikh07/portfolio:v6
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "1024Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
