portfolio_1-main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: jamilshaikh.in
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: portfolio-service
              port:
                number: 80
  tls:
  - hosts:
    - jamilshaikh.in
    secretName: jamilshaikh.in-tls
